# toptle

./: .gitignore  PERFORMANCE_SUMMARY.md  README.md  README_process_monitors.md  flake.nix  measure_wrapper_overhead.py  process_monitor_pty.py  process_monitor_wrapper.sh  pyproject.toml  quick_performance_test.sh  test_child_processes.sh  test_improvements.py  test_vim.txt  test_wrapper_performance.py  toptle  toptle.py
tests/: debug_cpu_usage.py  measure_wrapper_overhead.py  quick_performance_test.sh  test_child_processes.sh  test_improvements.py  test_title_changes.sh  test_wrapper_performance.py
